# rust-backend-notes

./: +---[RSA 4096]----+  +---[RSA 4096]----+.pub  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GRAPHQL EXAMPLES.md  README.md  init.sql  schema.sql
.sqlx/: query-011a147be034edceb9925f712854c170219fc0f5a9e9fee3e34549d4f019629d.json  query-172034ce7f64b8c30135d36afd918c41080e2cbf8ce743378843a3ec24be86f3.json  query-330f071631b6294965f38b08749389716a777aa87416563a0944ac33f6acb6b4.json  query-419563df65e653d30d692cb37155bb890ec85d4acef0d6a5967f5783500498bb.json  query-6f39bf7f3cccabb5375e9bb658727fda4d007f114ff81b0b10b33d6cd09d6006.json  query-719dc2d36e89c8489ec7b99a5d9477878ca3ae55568424268e61668f88db7870.json  query-9955c19478bf4f7d0b690d874c49c5b61be536cdb8903e397db75bbb60fda11d.json  query-9b93e3aa731b8f701dae434466eefae058841af8186a31589217dcccb6336e21.json  query-ae2c658c65e220a22e48b3e947b231e4f0b653cc8db43e0db642af921a96715b.json
migrations/: 001_initial_schema.sql  20250928144430_create_notes_table.sql  20250928155448_create_users_table.sql  20250930000001_folders_system.sql
migrations/migrations/: 001_initial_schema_postgres.sql
src/: auth.rs  data.rs  database.rs  errors.rs  main.rs  resolvers.rs  types.rs  validation.rs  web.rs
