[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }  # Add UUID support