[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 🚀 SQLx - future-proof!
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "chrono", 
    "uuid", 
    "migrate",
    "macros"
] }

# GraphQL - Only core async-graphql, no axum integration
async-graphql = "7.0"

# Web framework - Clean axum without conflicts
axum = { version = "0.7.5", features = ["macros", "json"] }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization and time handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For manual JSON handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment and configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# ✅ No async-graphql-axum - pure implementation to avoid version conflicts